--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/research">Research</a></li>
 	        		<li><a href="https://annikabacher.github.io/Bacher_CV.pdf">CV</a></li>
+	        		<li><a href="/contact">Contact</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -20,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:jesus.bueren@eui.eu">email</a></li>
+	        		<li><a href="mailto:annika.bacher@eui.eu">email</a></li>
 				</ul>
 			</footer>
 		</body>
