--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Fantasy','Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -14,19 +14,19 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #800080;
+    color: #581845;
 }
 a:hover {
     text-decoration: underline;
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Fantasy','Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.2em;
     line-height: 1.1em;
-    color: #ff99cc;
+    color: #5D5E5D;
 }
 footer {
     border-top: 1px solid #d5d5d5;
