--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Palatino','Helvetica', 'Arial';
+    font-family:'Helvetica', 'Arial','Palatino';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -21,7 +21,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Palatino','Helvetica', 'Arial';
+    font-family:'Helvetica', 'Arial','Palatino';
 }
 p {
     font-size: 1.2em;
