--- a/css/main.css
+++ b/css/main.css
@@ -23,25 +23,25 @@ a:hover {
 
 
 h1 {
-    font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #581845;
 }
 
 h2 {
     font-size: 1.8em;
-    font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #581845;
 }
 
 h3 {
-    font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.3em;
     color: #313131;
 }
 
 
 p {
-    font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.2em;
     line-height: 1.1em;
     color: #313131;
