--- a/css/main.css
+++ b/css/main.css
@@ -23,23 +23,23 @@ a:hover {
 
 
 h1 {
-    font:20px/1.5 Muli;
+    font:20px/1.5 Lato;
     color: #581845;
 }
 
 h2 {
-    font:18px/1.5 Muli;
+    font:18px/1.5 Lato;
     color: #581845;
 }
 
 h3 {
-    font:16px/1.5 Muli;
+    font:16px/1.5 Lato;
     color: #313131;
 }
 
 
 p {
-    font:14px/1.5 Muli;
+    font:14px/1.5 Lato;
     line-height: 1.1em;
     color: #313131;
 }
